--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,26 @@ a:hover, a:active{
 
 table{
     width: 100%;
+    height: 100%;
     border-collapse: collapse;
 }
 th,td{
     border: 1px solid black;
     padding: 8px;
     text-align: left;
+    width: 50px;
+    height: 1%;
+}
+
+.foto{
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+
+}
+
+.tablaI{
+    width: 300px;
+    height: 300px;
+    border-collapse: collapse;
 }
