--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,15 @@ table{
     height: 100%;
     border-collapse: collapse;
 }
-th,td{
+th{
+    text-align: center;
     border: 1px solid black;
     padding: 8px;
     text-align: left;
     width: 50px;
     height: 1%;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .foto{
@@ -69,4 +72,7 @@ th,td{
     width: 300px;
     height: 300px;
     border-collapse: collapse;
+}
+td{
+    background-color: rgb(178, 224, 209);
 }
